# fun_api

./: .env  .gitignore  Procfile  db.sqlite3  manage.py  pyproject.toml
api/: urls.py  views.py
fun_api/: asgi.py  settings.py  urls.py  wsgi.py
